--- a/src/pages/styles/layout.css
+++ b/src/pages/styles/layout.css
@@ -2,6 +2,9 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family: Muli; 
+    font-size: 16px;
+    color: #313135;
 }
 .body{
     display: flex;
@@ -47,16 +50,7 @@ lex-direction: column;
     background-color: #d8d8d875;    
     overflow-y: scroll; 
 }
-.div{
-    background-color: white;
-    width: 90%;
-    margin-left: 5%;
-    margin-right: 5%;
-    height: 120px;
-    border-radius: 5px;
-    margin-top: 15px;
-    margin-bottom: 3px;
-}
+
 .footer{
  background: #003946;
    height: 2rem;
