--- a/src/component/styles/unidad.css
+++ b/src/component/styles/unidad.css
@@ -46,12 +46,52 @@
     border-radius: 15px;
     font-family: Arial;
 }
+.modal-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 5px;
+  margin-bottom: 4px;
+}
 
+.producto-modal{
+  display: flex;
+  /* margin-left: 10%; */
+  flex-direction: row;
+  /* align-items: center; */
+  justify-content: center;
+  font-size: 16px;
+  margin-right:19px;
+}
 .modal-buttons{
 display: flex;
 justify-content: center;
 /* margin-right: 5%; */
 margin-top: 2%;
+}
+.producto-valor{
+  margin-right: 15%;
+}
+.btnsumar{
+  /* background-color: red; */
+  width: 20%;
+  padding: 5%;
+  
+}
+.btnsumar button{
+  text-align: center;
+  background: #7dc800;
+  padding: .20em .8em .8em;
+  border: none;
+  color: white;
+  margin: 5px;
+  border-radius: 100px;
+  height: 30px;
+  cursor: pointer;
+  box-shadow: inset 0-.2em rgba(0, 0, 0,.2);
+  outline: 0;
+  transition: .2s;
+  
 }
 .btnModal{
   text-align: center;
