--- a/src/component/styles/header.css
+++ b/src/component/styles/header.css
@@ -1,11 +1,17 @@
-.header{
-    background-color: #f93b3bc7;;
-    width: 100%;
-    height: 50px;
-}
 
-*{
-    padding:  0px;
-    margin: 0px;
-}
+.header-opsiones{
+    margin-top: 10px;
+    display: flex;
+    color: white;
+    justify-content:space-between;
 
+    /* background-color: whitesmoke; */
+}
+.header-opsiones p{
+color: white;
+}
+.header-opsiones_input {
+    margin-top: 5px;
+    width: 80%;
+    margin-right: 15px;
+}
