--- a/src/component/styles/header.css
+++ b/src/component/styles/header.css
@@ -15,3 +15,21 @@ color: white;
     width: 80%;
     margin-right: 15px;
 }
+.input-group{
+    display: flex;
+}
+.form-control{
+    width: 80%;
+    padding: 5px;
+    border: none;
+    color: gray;
+    /* border-radius:5px; */
+}
+.input-group-prepend{
+    background-color: #e9ecef;
+    width: 35px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
