--- a/src/component/styles/carrito.css
+++ b/src/component/styles/carrito.css
@@ -30,7 +30,11 @@
        /* justify-content: center; */
        /* flex-direction: column-reverse; */
         animation:modalIn .8s forwards;
-        padding: 1em;
+        /* padding: 1em; */
+        /* padding-top:0px ; */
+        padding-left:1em ;
+        padding-right:1em ;
+        padding-bottom:1em ;
         border-radius:.5em ;
         max-height: 20em;
         overflow-y: scroll;
@@ -73,8 +77,13 @@
     font-family: Arial;
 }
 
+.sticky{
+  margin-top: 0px;
+    position: sticky;
+    top: 0;
+}
 
-.btnModal{
+.btnModalCompra{
   text-align: center;
   background: #7dc800;
   padding: .6em .8em .8em;
@@ -88,6 +97,21 @@
   transition: .2s;
   /* will-change: tra; */
 }
+.btnModalVolver{
+  text-align: center;
+  background: #ffc107;
+  padding: .6em .8em .8em;
+  border: none;
+  color: white;
+  margin: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: inset 0-.2em rgba(0, 0, 0,.2);
+  outline: 0;
+  transition: .2s;
+  /* will-change: tra; */
+}
+
 @keyframes modalIn {
     0% {
       transform: translateY(-3000px);
